Updating Blog w/ Homework Links

--- a/personal-site/portfolio.html
+++ b/personal-site/portfolio.html
@@ -19,6 +19,12 @@
 		<p>I recently graduated from a Front-End Web Development course at General Assembly where I learned HTML, CSS, JavaScript, jQuery and how to be an awesome Front-End Web Developer! During my spare time, I enjoy playing badminton, traveling the world and exploring new restaurants. 
 		</p>
 		<br>
+		<h3>HOMEWORK</h3>
+			<ul>
+				<li><a href="../relaxr-landing/index.html">Homework 1: Relaxr Landing Page</a></li>
+				<li><a href="../relaxr-blog/index.html">Homework 2: Relaxr Blog</a></li>
+			</ul>
+		<br>
 		<h3>PORTFOLIO</h3>
 		<br>
 		<ul>
