Uploading homework-city
Also updated links to homework on personal site

--- a/personal-site/portfolio.html
+++ b/personal-site/portfolio.html
@@ -21,14 +21,11 @@
 		<br>
 		<h3>HOMEWORK</h3>
 			<ul>
-<<<<<<< HEAD
-				<li><a href="../relaxr-landing/index.html">Homework 1: Relaxr Landing Page</a></li>
-				<li><a href="../relaxr-blog/index.html">Homework 2: Relaxr Blog</a></li>
-=======
 				<li><a href="index.html">Homework 1: Personal Site</a></li>
 				<li><a href="../relaxr-landing/index.html">Homework 2: Relaxr Landing Page</a></li>
 				<li><a href="../relaxr-blog/index.html">Homework 3: Relaxr Blog</a></li>
->>>>>>> refs/remotes/origin/master
+				<li><a href="../relaxr-javascript/index.html">Homework 4: Relaxr With JavaScript</a></li>
+				<li><a href="../homework-city/index.html">Homework 5: CitiPix</a></li>
 			</ul>
 		<br>
 		<h3>PORTFOLIO</h3>
