Citipix-Array homework

--- a/in-class-materials/degree-exercise/index.html
+++ b/in-class-materials/degree-exercise/index.html
@@ -20,7 +20,7 @@
   <span id="comparison"></span>
   <input id="Cels">
 </div>
-<button id="calc">Calculate</button>
+<button id="calcbutton">Calculate</button>
 
 <br>
 
